Full multilingual support: 8 languages across all pages
Add complete i18n coverage for 5 HTML pages (index, privacy,
LocalMind, LocalWrite, LocalPDF) in 8 languages: English, Hindi,
Russian, Chinese Simplified, Arabic (RTL), Spanish, Japanese, French.

- Add data-i18n attributes to all translatable elements
- Rewrite all 28 non-English JSON files with correct key structures
- Update 4 English JSON files with new keys for added sections
- 4,792 translated strings with 100% key coverage validated
- Fix Arabic RTL support across all pages

--- a/localmind/index.html
+++ b/localmind/index.html
@@ -346,9 +346,9 @@
     <section class="testimonials-section">
         <div class="container">
             <div class="section-header">
-                <span class="section-label">What Users Say</span>
-                <h2>Trusted by <span class="gradient-text">Professionals Across India</span></h2>
-                <p>From call center managers to medical researchers, LocalMind serves diverse needs with one core promise: your data stays yours.</p>
+                <span class="section-label" data-i18n="testimonials.label">What Users Say</span>
+                <h2 data-i18n="testimonials.title">Trusted by <span class="gradient-text">Professionals Across India</span></h2>
+                <p data-i18n="testimonials.subtitle">From call center managers to medical researchers, LocalMind serves diverse needs with one core promise: your data stays yours.</p>
             </div>
             <div class="testimonials-grid">
                 <div class="testimonial-card">
@@ -359,7 +359,7 @@
                             <p>Call Center Manager, Mumbai</p>
                         </div>
                     </div>
-                    <p class="testimonial-text">"We audit 500+ customer service calls monthly. LocalMind saves us $400/month compared to cloud services. The quality scoring with CoT reasoning helps train our agents on empathy and resolution skills. Best investment we never had to make."</p>
+                    <p class="testimonial-text" data-i18n="testimonials.t1_text">"We audit 500+ customer service calls monthly. LocalMind saves us $400/month compared to cloud services. The quality scoring with CoT reasoning helps train our agents on empathy and resolution skills. Best investment we never had to make."</p>
                 </div>
                 <div class="testimonial-card">
                     <div class="testimonial-header">
@@ -369,7 +369,7 @@
                             <p>Journalist, Delhi</p>
                         </div>
                     </div>
-                    <p class="testimonial-text">"Protecting source identities is non-negotiable in my line of work. LocalMind's offline transcription means no server logs, no data breaches, no government access requests. I process interviews on flights and in remote areas. Finally, transcription I can trust completely."</p>
+                    <p class="testimonial-text" data-i18n="testimonials.t2_text">"Protecting source identities is non-negotiable in my line of work. LocalMind's offline transcription means no server logs, no data breaches, no government access requests. I process interviews on flights and in remote areas. Finally, transcription I can trust completely."</p>
                 </div>
                 <div class="testimonial-card">
                     <div class="testimonial-header">
@@ -379,7 +379,7 @@
                             <p>Medical Researcher, Bangalore</p>
                         </div>
                     </div>
-                    <p class="testimonial-text">"HIPAA compliance was critical for our patient interview transcriptions. LocalMind processes everything locally - no data ever leaves our secure hospital systems. The accuracy across Hindi and English mixed speech is remarkable. A game-changer for medical research."</p>
+                    <p class="testimonial-text" data-i18n="testimonials.t3_text">"HIPAA compliance was critical for our patient interview transcriptions. LocalMind processes everything locally - no data ever leaves our secure hospital systems. The accuracy across Hindi and English mixed speech is remarkable. A game-changer for medical research."</p>
                 </div>
             </div>
         </div>
@@ -571,7 +571,7 @@
                     <p class="company" data-i18n="footer.company">A <strong>Svetozar Technologies</strong> Project</p>
                 </div>
                 <div class="footer-links">
-                    <h4>Products</h4>
+                    <h4 data-i18n="footer.products_title">Products</h4>
                     <ul>
                         <li><a href="../localmind/">LocalMind</a></li>
                         <li><a href="../localwrite/">LocalWrite</a></li>
@@ -579,17 +579,17 @@
                     </ul>
                 </div>
                 <div class="footer-links">
-                    <h4>Community</h4>
+                    <h4 data-i18n="footer.community_title">Community</h4>
                     <ul>
                         <li><a href="https://github.com/Svetozar-Technologies" target="_blank">GitHub</a></li>
-                        <li><a href="https://github.com/Svetozar-Technologies/LocalMind/discussions" target="_blank">Discussions</a></li>
+                        <li><a href="https://github.com/Svetozar-Technologies/LocalMind/discussions" target="_blank" data-i18n="footer.discussions">Discussions</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
-                    <h4>Legal</h4>
+                    <h4 data-i18n="footer.legal_title">Legal</h4>
                     <ul>
-                        <li><a href="../privacy.html">Privacy Policy</a></li>
-                        <li><a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a></li>
+                        <li><a href="../privacy.html" data-i18n="footer.privacy">Privacy Policy</a></li>
+                        <li><a href="https://opensource.org/licenses/MIT" target="_blank" data-i18n="footer.license">MIT License</a></li>
                     </ul>
                 </div>
             </div>
