--- a/privacy.html
+++ b/privacy.html
@@ -86,106 +86,106 @@
     </nav>
 
     <main class="privacy-content">
-        <h1>Privacy Policy</h1>
-        <p class="last-updated">Last updated: February 2026</p>
+        <h1 data-i18n="privacy.page_title">Privacy Policy</h1>
+        <p class="last-updated" data-i18n="privacy.last_updated">Last updated: February 2026</p>
 
         <div class="privacy-highlight">
-            <h3>The Short Version</h3>
-            <p style="margin-bottom: 0;">We don't collect your data. Every Svetozar Technologies product runs 100% locally on your device. Your files, text, audio, and documents never touch our servers — because we don't have servers. That's not a feature. It's our founding principle.</p>
+            <h3 data-i18n="privacy.short_title">The Short Version</h3>
+            <p style="margin-bottom: 0;" data-i18n="privacy.short_text">We don't collect your data. Every Svetozar Technologies product runs 100% locally on your device. Your files, text, audio, and documents never touch our servers — because we don't have servers. That's not a feature. It's our founding principle.</p>
         </div>
 
-        <h2>1. Our Philosophy</h2>
-        <p>At Svetozar Technologies, we believe privacy is a fundamental right, not a premium feature. We build AI tools that work entirely on your device because that's how software should work. No accounts. No cloud processing. No data collection. Ever.</p>
+        <h2 data-i18n="privacy.s1_title">1. Our Philosophy</h2>
+        <p data-i18n="privacy.s1_text">At Svetozar Technologies, we believe privacy is a fundamental right, not a premium feature. We build AI tools that work entirely on your device because that's how software should work. No accounts. No cloud processing. No data collection. Ever.</p>
 
-        <h2>2. Desktop Applications — Zero Data Collection</h2>
-        <p>This policy applies to all Svetozar Technologies desktop applications, including <strong>LocalMind</strong> (audio transcription), <strong>LocalWrite</strong> (AI writing assistant), and <strong>LocalPDF</strong> (PDF intelligence). Every application:</p>
+        <h2 data-i18n="privacy.s2_title">2. Desktop Applications — Zero Data Collection</h2>
+        <p data-i18n="privacy.s2_intro">This policy applies to all Svetozar Technologies desktop applications, including <strong>LocalMind</strong> (audio transcription), <strong>LocalWrite</strong> (AI writing assistant), and <strong>LocalPDF</strong> (PDF intelligence). Every application:</p>
         <ul>
-            <li><strong>Processes 100% locally:</strong> All AI processing — transcription, writing, summarization, PDF analysis — happens entirely on your device.</li>
-            <li><strong>Collects zero telemetry:</strong> We do not collect usage statistics, crash reports, performance metrics, or any form of analytics from our apps.</li>
-            <li><strong>Makes no network calls:</strong> After the initial AI model download, all applications work completely offline.</li>
-            <li><strong>Requires no account:</strong> You never need to create an account or provide personal information to use any of our products.</li>
-            <li><strong>Keeps your files local:</strong> All outputs — transcriptions, documents, reports, and exports — are stored only on your device.</li>
+            <li data-i18n="privacy.s2_item1"><strong>Processes 100% locally:</strong> All AI processing — transcription, writing, summarization, PDF analysis — happens entirely on your device.</li>
+            <li data-i18n="privacy.s2_item2"><strong>Collects zero telemetry:</strong> We do not collect usage statistics, crash reports, performance metrics, or any form of analytics from our apps.</li>
+            <li data-i18n="privacy.s2_item3"><strong>Makes no network calls:</strong> After the initial AI model download, all applications work completely offline.</li>
+            <li data-i18n="privacy.s2_item4"><strong>Requires no account:</strong> You never need to create an account or provide personal information to use any of our products.</li>
+            <li data-i18n="privacy.s2_item5"><strong>Keeps your files local:</strong> All outputs — transcriptions, documents, reports, and exports — are stored only on your device.</li>
         </ul>
 
-        <h2>3. Website Analytics</h2>
-        <p>When you visit our website (svetozar-technologies.github.io), we use <strong>Plausible Analytics</strong>, a privacy-first analytics service:</p>
+        <h2 data-i18n="privacy.s3_title">3. Website Analytics</h2>
+        <p data-i18n="privacy.s3_intro">When you visit our website (svetozar-technologies.github.io), we use <strong>Plausible Analytics</strong>, a privacy-first analytics service:</p>
         <ul>
-            <li><strong>No cookies:</strong> Plausible does not use cookies or track you across websites.</li>
-            <li><strong>No personal data:</strong> We cannot identify individual visitors.</li>
-            <li><strong>GDPR compliant:</strong> All data is anonymized and aggregated.</li>
+            <li data-i18n="privacy.s3_item1"><strong>No cookies:</strong> Plausible does not use cookies or track you across websites.</li>
+            <li data-i18n="privacy.s3_item2"><strong>No personal data:</strong> We cannot identify individual visitors.</li>
+            <li data-i18n="privacy.s3_item3"><strong>GDPR compliant:</strong> All data is anonymized and aggregated.</li>
         </ul>
-        <p>We collect only basic anonymous metrics like page views and referral sources to understand how people discover our products. Nothing personally identifiable.</p>
+        <p data-i18n="privacy.s3_extra">We collect only basic anonymous metrics like page views and referral sources to understand how people discover our products. Nothing personally identifiable.</p>
 
-        <h2>4. No Third-Party Tracking</h2>
-        <p>Our website and applications do NOT use:</p>
+        <h2 data-i18n="privacy.s4_title">4. No Third-Party Tracking</h2>
+        <p data-i18n="privacy.s4_intro">Our website and applications do NOT use:</p>
         <ul>
-            <li>Google Analytics or any invasive analytics</li>
-            <li>Facebook Pixel or advertising trackers</li>
-            <li>Third-party cookies of any kind</li>
-            <li>Browser fingerprinting techniques</li>
-            <li>Cross-site tracking scripts</li>
-        </ul>
-
-        <h2>5. Email Communications</h2>
-        <p>If you voluntarily provide your email address for product updates:</p>
-        <ul>
-            <li><strong>100% opt-in:</strong> Email collection is always voluntary. You can download and use all products without providing any personal information.</li>
-            <li><strong>Stored securely:</strong> Emails are handled via Formspree, a privacy-focused form service.</li>
-            <li><strong>Limited use:</strong> We only send infrequent notifications about major product releases, new features, and security updates.</li>
-            <li><strong>Never shared:</strong> We will never sell, rent, or share your email with third parties.</li>
-            <li><strong>Easy unsubscribe:</strong> Every email includes a one-click unsubscribe link.</li>
+            <li data-i18n="privacy.s4_item1">Google Analytics or any invasive analytics</li>
+            <li data-i18n="privacy.s4_item2">Facebook Pixel or advertising trackers</li>
+            <li data-i18n="privacy.s4_item3">Third-party cookies of any kind</li>
+            <li data-i18n="privacy.s4_item4">Browser fingerprinting techniques</li>
+            <li data-i18n="privacy.s4_item5">Cross-site tracking scripts</li>
         </ul>
 
-        <h2>6. Third-Party Services</h2>
-        <p>Our applications do not integrate with third-party services that could compromise your privacy. The only external dependency is the initial AI model download, which comes directly from <strong>Hugging Face</strong>, a trusted open-source model repository. After that, everything runs offline.</p>
-
-        <h2>7. Data Security</h2>
-        <p><strong>Desktop applications:</strong> Since all data stays on your device, security is determined by your operating system's built-in protections (e.g., FileVault on macOS, BitLocker on Windows).</p>
-        <p><strong>Website:</strong> This site is served over HTTPS. Any form submissions are encrypted in transit.</p>
-
-        <h2>8. Your Rights (GDPR Compliance)</h2>
-        <p>If you've provided your email address, you have the right to:</p>
+        <h2 data-i18n="privacy.s5_title">5. Email Communications</h2>
+        <p data-i18n="privacy.s5_intro">If you voluntarily provide your email address for product updates:</p>
         <ul>
-            <li><strong>Access:</strong> Request a copy of any data we hold (limited to your email).</li>
-            <li><strong>Deletion:</strong> Request immediate removal from our email list.</li>
-            <li><strong>Portability:</strong> Receive your data in a machine-readable format.</li>
-            <li><strong>Correction:</strong> Update your email address at any time.</li>
+            <li data-i18n="privacy.s5_item1"><strong>100% opt-in:</strong> Email collection is always voluntary. You can download and use all products without providing any personal information.</li>
+            <li data-i18n="privacy.s5_item2"><strong>Stored securely:</strong> Emails are handled via Formspree, a privacy-focused form service.</li>
+            <li data-i18n="privacy.s5_item3"><strong>Limited use:</strong> We only send infrequent notifications about major product releases, new features, and security updates.</li>
+            <li data-i18n="privacy.s5_item4"><strong>Never shared:</strong> We will never sell, rent, or share your email with third parties.</li>
+            <li data-i18n="privacy.s5_item5"><strong>Easy unsubscribe:</strong> Every email includes a one-click unsubscribe link.</li>
         </ul>
-        <p>To exercise these rights, contact us at: <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></p>
 
-        <h2>9. Open Source Transparency</h2>
-        <p>All Svetozar Technologies products are open source under the MIT license. You can:</p>
+        <h2 data-i18n="privacy.s6_title">6. Third-Party Services</h2>
+        <p data-i18n="privacy.s6_text">Our applications do not integrate with third-party services that could compromise your privacy. The only external dependency is the initial AI model download, which comes directly from <strong>Hugging Face</strong>, a trusted open-source model repository. After that, everything runs offline.</p>
+
+        <h2 data-i18n="privacy.s7_title">7. Data Security</h2>
+        <p data-i18n="privacy.s7_text1"><strong>Desktop applications:</strong> Since all data stays on your device, security is determined by your operating system's built-in protections (e.g., FileVault on macOS, BitLocker on Windows).</p>
+        <p data-i18n="privacy.s7_text2"><strong>Website:</strong> This site is served over HTTPS. Any form submissions are encrypted in transit.</p>
+
+        <h2 data-i18n="privacy.s8_title">8. Your Rights (GDPR Compliance)</h2>
+        <p data-i18n="privacy.s8_intro">If you've provided your email address, you have the right to:</p>
         <ul>
-            <li><strong>Audit every line of code</strong> to verify our privacy claims across all repositories.</li>
-            <li><strong>Verify network behavior</strong> — confirm our applications make no unauthorized network calls.</li>
-            <li><strong>Build from source</strong> — compile any application yourself for maximum trust.</li>
-            <li><strong>Modify freely</strong> — adapt the code to meet your specific privacy requirements.</li>
+            <li data-i18n="privacy.s8_item1"><strong>Access:</strong> Request a copy of any data we hold (limited to your email).</li>
+            <li data-i18n="privacy.s8_item2"><strong>Deletion:</strong> Request immediate removal from our email list.</li>
+            <li data-i18n="privacy.s8_item3"><strong>Portability:</strong> Receive your data in a machine-readable format.</li>
+            <li data-i18n="privacy.s8_item4"><strong>Correction:</strong> Update your email address at any time.</li>
         </ul>
-        <p>Visit our repositories: <a href="https://github.com/Svetozar-Technologies" target="_blank">github.com/Svetozar-Technologies</a></p>
+        <p data-i18n="privacy.s8_contact">To exercise these rights, contact us at: <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></p>
 
-        <h2>10. Children's Privacy</h2>
-        <p>Our products are not directed at children under 13. However, since we collect no personal data through our desktop applications, they can be safely used by people of all ages.</p>
-
-        <h2>11. Changes to This Policy</h2>
-        <p>We may update this privacy policy as we release new products or features. Material changes will be announced via:</p>
+        <h2 data-i18n="privacy.s9_title">9. Open Source Transparency</h2>
+        <p data-i18n="privacy.s9_intro">All Svetozar Technologies products are open source under the MIT license. You can:</p>
         <ul>
-            <li>Email notification (if you're subscribed)</li>
-            <li>Prominent notice on this website</li>
-            <li>GitHub repository announcements</li>
+            <li data-i18n="privacy.s9_item1"><strong>Audit every line of code</strong> to verify our privacy claims across all repositories.</li>
+            <li data-i18n="privacy.s9_item2"><strong>Verify network behavior</strong> — confirm our applications make no unauthorized network calls.</li>
+            <li data-i18n="privacy.s9_item3"><strong>Build from source</strong> — compile any application yourself for maximum trust.</li>
+            <li data-i18n="privacy.s9_item4"><strong>Modify freely</strong> — adapt the code to meet your specific privacy requirements.</li>
         </ul>
-        <p>Our core commitment — that your data stays on your device — will never change.</p>
+        <p data-i18n="privacy.s9_repos">Visit our repositories: <a href="https://github.com/Svetozar-Technologies" target="_blank">github.com/Svetozar-Technologies</a></p>
 
-        <h2>12. Contact Us</h2>
-        <p>Questions about our privacy practices? Reach out through any of these channels:</p>
+        <h2 data-i18n="privacy.s10_title">10. Children's Privacy</h2>
+        <p data-i18n="privacy.s10_text">Our products are not directed at children under 13. However, since we collect no personal data through our desktop applications, they can be safely used by people of all ages.</p>
+
+        <h2 data-i18n="privacy.s11_title">11. Changes to This Policy</h2>
+        <p data-i18n="privacy.s11_intro">We may update this privacy policy as we release new products or features. Material changes will be announced via:</p>
         <ul>
-            <li><strong>Email:</strong> <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></li>
-            <li><strong>GitHub:</strong> <a href="https://github.com/Svetozar-Technologies" target="_blank">Organization Page</a></li>
-            <li><strong>Discussions:</strong> <a href="https://github.com/orgs/Svetozar-Technologies/discussions" target="_blank">Community Forum</a></li>
+            <li data-i18n="privacy.s11_item1">Email notification (if you're subscribed)</li>
+            <li data-i18n="privacy.s11_item2">Prominent notice on this website</li>
+            <li data-i18n="privacy.s11_item3">GitHub repository announcements</li>
+        </ul>
+        <p data-i18n="privacy.s11_extra">Our core commitment — that your data stays on your device — will never change.</p>
+
+        <h2 data-i18n="privacy.s12_title">12. Contact Us</h2>
+        <p data-i18n="privacy.s12_intro">Questions about our privacy practices? Reach out through any of these channels:</p>
+        <ul>
+            <li data-i18n="privacy.s12_item1"><strong>Email:</strong> <a href="mailto:kaivalya.pandey@gmail.com">kaivalya.pandey@gmail.com</a></li>
+            <li data-i18n="privacy.s12_item2"><strong>GitHub:</strong> <a href="https://github.com/Svetozar-Technologies" target="_blank">Organization Page</a></li>
+            <li data-i18n="privacy.s12_item3"><strong>Discussions:</strong> <a href="https://github.com/orgs/Svetozar-Technologies/discussions" target="_blank">Community Forum</a></li>
         </ul>
 
         <div class="privacy-highlight" style="margin-top: 3rem;">
-            <h3>Our Promise</h3>
-            <p style="margin-bottom: 0;"><strong>Desktop apps:</strong> Zero data collection. Everything stays on your device.<br>
+            <h3 data-i18n="privacy.promise_title">Our Promise</h3>
+            <p style="margin-bottom: 0;" data-i18n="privacy.promise_text"><strong>Desktop apps:</strong> Zero data collection. Everything stays on your device.<br>
             <strong>Website:</strong> Privacy-first analytics. No cookies. No personal data.<br>
             <strong>Email:</strong> Opt-in only. No spam. Easy unsubscribe.<br>
             <strong>Always:</strong> We will never compromise your privacy for profit.</p>
@@ -204,25 +204,25 @@
                     <p data-i18n="footer.tagline">AI that's free, private, and yours.</p>
                 </div>
                 <div class="footer-links">
-                    <h4 data-i18n="footer.products">Products</h4>
+                    <h4 data-i18n="footer.products_title">Products</h4>
                     <a href="./localmind/">LocalMind</a>
                     <a href="./localwrite/">LocalWrite</a>
                     <a href="./localpdf/">LocalPDF</a>
                 </div>
                 <div class="footer-links">
-                    <h4 data-i18n="footer.community">Community</h4>
+                    <h4 data-i18n="footer.community_title">Community</h4>
                     <a href="https://github.com/Svetozar-Technologies" target="_blank">GitHub</a>
                     <a href="https://github.com/orgs/Svetozar-Technologies/discussions" target="_blank" data-i18n="footer.discussions">Discussions</a>
                 </div>
                 <div class="footer-links">
-                    <h4 data-i18n="footer.legal">Legal</h4>
+                    <h4 data-i18n="footer.legal_title">Legal</h4>
                     <a href="./privacy.html" data-i18n="footer.privacy">Privacy Policy</a>
                     <a href="https://opensource.org/licenses/MIT" target="_blank" data-i18n="footer.license">MIT License</a>
                 </div>
             </div>
             <div class="footer-bottom">
                 <p data-i18n="footer.copyright">&copy; 2025 Svetozar Technologies. MIT License.</p>
-                <p data-i18n="footer.built">Built with privacy in mind. No data leaves your device.</p>
+                <p data-i18n="footer.footer_tagline">Building AI that serves humanity, not corporations.</p>
             </div>
         </div>
     </footer>
