--- a/localpdf/index.html
+++ b/localpdf/index.html
@@ -39,7 +39,7 @@
             <div class="nav-links">
                 <a href="#product" data-i18n="nav.features">Features</a>
                 <a href="#use-cases" data-i18n="nav.use_cases">Use Cases</a>
-                <a href="#notify" data-i18n="nav.notify">Get Notified</a>
+                <a href="#notify" data-i18n="nav.notify">Download</a>
                 <a href="https://github.com/Svetozar-Technologies/LocalPDF" target="_blank" class="btn btn-outline" data-i18n="nav.github">GitHub</a>
                 <div id="languageSelector"></div>
             </div>
@@ -55,15 +55,15 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <div class="coming-soon-badge">
-                    <span class="badge-icon">🚧</span>
-                    <span data-i18n="hero.badge">Coming Soon</span>
+                <div class="coming-soon-badge" style="background: rgba(52,199,89,0.12); border-color: rgba(52,199,89,0.3);">
+                    <span class="badge-icon">✅</span>
+                    <span data-i18n="hero.badge">Available Now — Free &amp; Open Source</span>
                 </div>
-                <h1 data-i18n="hero.title">Your Documents.<br>Your Privacy.<br><span class="gradient-text">Your AI Assistant.</span></h1>
-                <p class="hero-subtitle" data-i18n="hero.subtitle">LocalPDF is a privacy-first AI toolkit for PDF documents. Chat with your PDFs, extract key insights, and summarize documents - all running 100% on your device. No cloud. No uploads. No compromises.</p>
+                <h1 data-i18n="hero.title">Your Documents.<br>Your Privacy.<br><span class="gradient-text">Your PDF Toolkit.</span></h1>
+                <p class="hero-subtitle" data-i18n="hero.subtitle">LocalPDF is a complete, privacy-first PDF toolkit. Compress, merge, split, protect, watermark, convert, and OCR your documents — all running 100% on your device. No cloud. No uploads. No compromises.</p>
                 <div class="hero-buttons">
-                    <a href="#notify" class="btn btn-primary btn-lg" data-i18n="hero.cta_notify">
-                        Get Notified When Ready
+                    <a href="https://github.com/Svetozar-Technologies/LocalPDF/releases/download/v1.0.0/LocalPDF-1.0.0-macOS.dmg" class="btn btn-primary btn-lg" data-i18n="hero.cta_notify">
+                        ⬇ Download for macOS
                     </a>
                     <a href="#product" class="btn btn-secondary btn-lg" data-i18n="hero.cta_features">
                         Explore Features
@@ -163,11 +163,13 @@
                 <div class="product-feature">
                     <div class="feature-icon">
                         <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
+                            <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/>
+                            <polyline points="17 21 17 13 7 13 7 21"/>
+                            <polyline points="7 3 7 8 15 8"/>
                         </svg>
                     </div>
-                    <h3 data-i18n="product.feature1_title">Chat with PDFs</h3>
-                    <p data-i18n="product.feature1_desc">Ask questions about your documents in natural language. Get answers with page references.</p>
+                    <h3 data-i18n="product.feature1_title">Compress &amp; Batch Compress</h3>
+                    <p data-i18n="product.feature1_desc">Shrink PDFs with smart presets (Email, Web, Print). Process hundreds of files at once with batch mode.</p>
                 </div>
                 <div class="product-feature">
                     <div class="feature-icon">
@@ -178,29 +180,8 @@
                             <line x1="16" y1="17" x2="8" y2="17"/>
                         </svg>
                     </div>
-                    <h3 data-i18n="product.feature2_title">Smart Summaries</h3>
-                    <p data-i18n="product.feature2_desc">Get instant summaries of lengthy documents. Extract key points and conclusions in seconds.</p>
-                </div>
-                <div class="product-feature">
-                    <div class="feature-icon">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <circle cx="11" cy="11" r="8"/>
-                            <line x1="21" y1="21" x2="16.65" y2="16.65"/>
-                        </svg>
-                    </div>
-                    <h3 data-i18n="product.feature3_title">Information Extraction</h3>
-                    <p data-i18n="product.feature3_desc">Extract specific data points from contracts, invoices, reports automatically.</p>
-                </div>
-                <div class="product-feature">
-                    <div class="feature-icon">
-                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                            <line x1="3" y1="9" x2="21" y2="9"/>
-                            <line x1="9" y1="21" x2="9" y2="9"/>
-                        </svg>
-                    </div>
-                    <h3 data-i18n="product.feature4_title">Batch Processing</h3>
-                    <p data-i18n="product.feature4_desc">Process multiple PDFs at once. Summarize a folder of reports in one go.</p>
+                    <h3 data-i18n="product.feature2_title">Merge &amp; Split</h3>
+                    <p data-i18n="product.feature2_desc">Combine multiple PDFs into one or split a PDF by pages, ranges, or into individual files. Drag-and-drop reorder.</p>
                 </div>
                 <div class="product-feature">
                     <div class="feature-icon">
@@ -209,20 +190,45 @@
                             <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
                         </svg>
                     </div>
-                    <h3 data-i18n="product.feature5_title">Complete Privacy</h3>
-                    <p data-i18n="product.feature5_desc">Works entirely offline. Your confidential documents stay confidential.</p>
+                    <h3 data-i18n="product.feature3_title">Protect &amp; Watermark</h3>
+                    <p data-i18n="product.feature3_desc">Add passwords, set permissions, or overlay text and image watermarks. Unlock password-protected PDFs too.</p>
+                </div>
+                <div class="product-feature">
+                    <div class="feature-icon">
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="16 16 12 12 8 16"/>
+                            <line x1="12" y1="12" x2="12" y2="21"/>
+                            <path d="M20.39 18.39A5 5 0 0 0 18 9h-1.26A8 8 0 1 0 3 16.3"/>
+                        </svg>
+                    </div>
+                    <h3 data-i18n="product.feature4_title">Convert Anything</h3>
+                    <p data-i18n="product.feature4_desc">Image to PDF, PDF to Image (PNG/JPEG), PPT/PPTX to PDF. Drag-and-drop multiple images with reorder support.</p>
+                </div>
+                <div class="product-feature">
+                    <div class="feature-icon">
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="11" cy="11" r="8"/>
+                            <line x1="21" y1="21" x2="16.65" y2="16.65"/>
+                        </svg>
+                    </div>
+                    <h3 data-i18n="product.feature5_title">OCR — Scan to Text</h3>
+                    <p data-i18n="product.feature5_desc">Extract text from scanned PDFs using Tesseract OCR. Supports 100+ languages. Fully offline.</p>
                 </div>
             </div>
 
             <div class="product-languages">
-                <h4 data-i18n="product.usecases_heading">Perfect For</h4>
+                <h4 data-i18n="product.usecases_heading">10 Tools in One App</h4>
                 <div class="language-tags">
-                    <span class="language-tag" data-i18n="product.usecase1">Legal Documents</span>
-                    <span class="language-tag" data-i18n="product.usecase2">Research Papers</span>
-                    <span class="language-tag" data-i18n="product.usecase3">Financial Reports</span>
-                    <span class="language-tag" data-i18n="product.usecase4">Contracts</span>
-                    <span class="language-tag" data-i18n="product.usecase5">Medical Records</span>
-                    <span class="language-tag" data-i18n="product.usecase6">+ More</span>
+                    <span class="language-tag">Compress</span>
+                    <span class="language-tag">Batch Compress</span>
+                    <span class="language-tag">Merge</span>
+                    <span class="language-tag">Split</span>
+                    <span class="language-tag">Protect / Unlock</span>
+                    <span class="language-tag">Watermark</span>
+                    <span class="language-tag">Image to PDF</span>
+                    <span class="language-tag">PDF to Image</span>
+                    <span class="language-tag">PPT to PDF</span>
+                    <span class="language-tag">OCR</span>
                 </div>
             </div>
         </div>
@@ -449,46 +455,54 @@
         </div>
     </section>
 
-    <!-- Notify Section -->
+    <!-- Download Section -->
     <section class="download" id="notify">
         <div class="container">
             <div class="section-header">
-                <span class="section-label" data-i18n="notify.label">Coming Soon</span>
-                <h2 data-i18n="notify.title">Be the First<br><span class="gradient-text">to Know</span></h2>
-                <p data-i18n="notify.subtitle">LocalPDF is currently in development. Star the GitHub repo to get notified when we launch.</p>
+                <span class="section-label" data-i18n="notify.label">Download</span>
+                <h2 data-i18n="notify.title">Get LocalPDF<br><span class="gradient-text">Free Forever</span></h2>
+                <p data-i18n="notify.subtitle">Download LocalPDF for your platform. One app, 10 tools, zero cloud dependency.</p>
             </div>
             <div class="download-cards">
+                <a href="https://github.com/Svetozar-Technologies/LocalPDF/releases/download/v1.0.0/LocalPDF-1.0.0-macOS.dmg" class="download-card">
+                    <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.8-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
+                    </svg>
+                    <h3 data-i18n="notify.mac_title">Download for macOS</h3>
+                    <p data-i18n="notify.mac_desc">macOS 11.0+ &bull; Apple Silicon native &bull; 58 MB</p>
+                    <span class="coming-soon-badge" style="background: rgba(52,199,89,0.12); border-color: rgba(52,199,89,0.3); color: #34C759;">Download DMG</span>
+                </a>
+                <div class="download-card" style="opacity: 0.6; cursor: default;">
+                    <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M0 3.449L9.75 2.1v9.451H0m10.949-9.602L24 0v11.4H10.949M0 12.6h9.75v9.451L0 20.699M10.949 12.6H24V24l-12.9-1.801"/>
+                    </svg>
+                    <h3 data-i18n="notify.win_title">Windows</h3>
+                    <p data-i18n="notify.win_desc">Windows 10+ &bull; Coming soon</p>
+                    <span class="coming-soon-badge">Coming Soon</span>
+                </div>
                 <a href="https://github.com/Svetozar-Technologies/LocalPDF" target="_blank" class="download-card">
                     <svg width="48" height="48" viewBox="0 0 24 24" fill="currentColor">
                         <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                     </svg>
-                    <h3 data-i18n="notify.star_title">Star on GitHub</h3>
-                    <p data-i18n="notify.star_desc">Get notified when LocalPDF launches</p>
-                    <span class="coming-soon-badge" data-i18n="notify.star_cta">Watch Repository</span>
-                </a>
-                <a href="https://github.com/Svetozar-Technologies/LocalPDF/discussions" target="_blank" class="download-card">
-                    <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
-                    </svg>
-                    <h3 data-i18n="notify.discuss_title">Join Discussions</h3>
-                    <p data-i18n="notify.discuss_desc">Share your feature requests and ideas</p>
-                    <span class="coming-soon-badge" data-i18n="notify.discuss_cta">Start Discussing</span>
+                    <h3 data-i18n="notify.star_title">View Source Code</h3>
+                    <p data-i18n="notify.star_desc">MIT Licensed &bull; Open Source</p>
+                    <span class="coming-soon-badge" data-i18n="notify.star_cta">GitHub Repository</span>
                 </a>
             </div>
             <div class="system-requirements">
-                <h4 data-i18n="notify.planned_heading">Planned Features</h4>
+                <h4 data-i18n="notify.planned_heading">System Requirements</h4>
                 <div class="requirements-grid">
                     <div class="requirement">
-                        <span class="req-label" data-i18n="notify.planned1_label">Chat</span>
-                        <span class="req-value" data-i18n="notify.planned1_value">Natural language Q&A with PDFs</span>
+                        <span class="req-label">macOS</span>
+                        <span class="req-value">macOS 11.0 (Big Sur) or later, Apple Silicon native</span>
                     </div>
                     <div class="requirement">
-                        <span class="req-label" data-i18n="notify.planned2_label">Summarize</span>
-                        <span class="req-value" data-i18n="notify.planned2_value">Instant summaries of any document</span>
+                        <span class="req-label">Storage</span>
+                        <span class="req-value">200 MB free disk space</span>
                     </div>
                     <div class="requirement">
-                        <span class="req-label" data-i18n="notify.planned3_label">Extract</span>
-                        <span class="req-value" data-i18n="notify.planned3_value">Pull specific data from documents</span>
+                        <span class="req-label">Privacy</span>
+                        <span class="req-value">No internet required — works 100% offline</span>
                     </div>
                 </div>
             </div>
