Update homepage: LocalPDF now Available with direct download
- Change LocalPDF badge from Coming Soon to Available Now
- Update description to reflect shipped features (10 tools)
- Add direct macOS DMG download button on product card

--- a/index.html
+++ b/index.html
@@ -231,18 +231,19 @@
                             <polyline points="10 9 9 9 8 9"/>
                         </svg>
                     </div>
-                    <div class="product-badge coming-soon" data-i18n="products.badge_coming">Coming Soon</div>
+                    <div class="product-badge available" data-i18n="products.badge_available">Available Now</div>
                     <h3>LocalPDF</h3>
-                    <p class="product-tagline" data-i18n="products.localpdf_tagline">AI-Powered PDF Tools</p>
-                    <p class="product-desc" data-i18n="products.localpdf_desc">Chat with your documents, extract insights, and process PDFs with local AI. Your sensitive documents stay completely private.</p>
+                    <p class="product-tagline" data-i18n="products.localpdf_tagline">Complete PDF Toolkit</p>
+                    <p class="product-desc" data-i18n="products.localpdf_desc">Compress, merge, split, protect, watermark, convert, and OCR your PDFs. 10 tools in one app, all running 100% on your device.</p>
                     <ul class="product-features">
-                        <li data-i18n="products.localpdf_feature1">Chat with PDFs</li>
-                        <li data-i18n="products.localpdf_feature2">Extract Key Information</li>
-                        <li data-i18n="products.localpdf_feature3">Summarize Documents</li>
+                        <li data-i18n="products.localpdf_feature1">Compress, Merge &amp; Split</li>
+                        <li data-i18n="products.localpdf_feature2">Protect, Watermark &amp; OCR</li>
+                        <li data-i18n="products.localpdf_feature3">Image/PPT to PDF &amp; PDF to Image</li>
                         <li data-i18n="products.localpdf_feature4">100% Local Processing</li>
                     </ul>
                     <div class="product-actions">
-                        <a href="./localpdf/" class="btn btn-secondary" data-i18n="products.learn_more">Learn More</a>
+                        <a href="https://github.com/Svetozar-Technologies/LocalPDF/releases/download/v1.0.0/LocalPDF-1.0.0-macOS.dmg" class="btn btn-primary" data-i18n="products.download">Download for macOS</a>
+                        <a href="./localpdf/" class="btn btn-secondary" data-i18n="products.learn_more" style="margin-left: 8px;">Learn More</a>
                     </div>
                 </div>
             </div>
