--- a/index.html
+++ b/index.html
@@ -243,8 +243,7 @@
                         <li data-i18n="products.localpdf_feature4">100% Local Processing</li>
                     </ul>
                     <div class="product-actions">
-                        <a href="https://github.com/Svetozar-Technologies/LocalPDF/releases/download/v1.0.0/LocalPDF-1.0.0-macOS.dmg" class="btn btn-primary" data-i18n="products.download">Download for macOS</a>
-                        <a href="./localpdf/" class="btn btn-secondary" data-i18n="products.learn_more" style="margin-left: 8px;">Learn More</a>
+                        <a href="./localpdf/" class="btn btn-primary" data-i18n="products.learn_more">Learn More</a>
                     </div>
                 </div>
             </div>
