Update LinkedIn card text to mention new versions and upcoming software

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         </svg>
                         <div>
                             <strong data-i18n="join.linkedin_title">Follow on LinkedIn</strong>
-                            <span data-i18n="join.linkedin_desc">Updates, feedback &amp; community</span>
+                            <span data-i18n="join.linkedin_desc">Stay updated on new versions &amp; upcoming software</span>
                         </div>
                     </a>
                     <a href="https://github.com/orgs/Svetozar-Technologies/discussions" target="_blank" class="join-card">
