Update LocalPDF website to match actual app features
Remove false AI chat/summarize/OCR claims and replace with accurate
descriptions of the 10 actual tools: Compress, Batch Compress, Merge,
Split, Protect/Unlock (AES-256), Watermark, Image to PDF, PDF to Image,
PPT to PDF, and PDF Page Editor. Update system requirements, comparison
targets, testimonials, and FAQs across all 8 languages.

--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
                     <div class="product-badge available" data-i18n="products.badge_available">Available Now</div>
                     <h3>LocalPDF</h3>
                     <p class="product-tagline" data-i18n="products.localpdf_tagline">Complete PDF Toolkit</p>
-                    <p class="product-desc" data-i18n="products.localpdf_desc">Compress, merge, split, protect, watermark, convert, and OCR your PDFs. 10 tools in one app, all running 100% on your device.</p>
+                    <p class="product-desc" data-i18n="products.localpdf_desc">Compress, merge, split, protect, watermark, convert, and edit your PDFs. 10 tools in one app, all running 100% on your device.</p>
                     <ul class="product-features">
                         <li data-i18n="products.localpdf_feature1">Compress, Merge &amp; Split</li>
-                        <li data-i18n="products.localpdf_feature2">Protect, Watermark &amp; OCR</li>
-                        <li data-i18n="products.localpdf_feature3">Image/PPT to PDF &amp; PDF to Image</li>
+                        <li data-i18n="products.localpdf_feature2">Protect, Watermark &amp; Convert</li>
+                        <li data-i18n="products.localpdf_feature3">PDF Page Editor &amp; Annotations</li>
                         <li data-i18n="products.localpdf_feature4">100% Local Processing</li>
                     </ul>
                     <div class="product-actions">
