Update LocalPDF downloads for v1.2.0 release on all platforms
Update all download links from v1.1.0 to v1.2.0. Enable Linux
downloads (previously Coming Soon). Add download button to homepage
LocalPDF card. Add Windows and Linux to system requirements.

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                     </ul>
                     <div class="product-actions">
                         <a href="./localpdf/" class="btn btn-primary" data-i18n="products.learn_more">Learn More</a>
+                        <a href="https://github.com/Svetozar-Technologies/LocalPDF/releases/tag/v1.2.0" class="btn btn-outline">Download</a>
                     </div>
                 </div>
             </div>
